<resources>
    <string name="app_name">Predicate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_app_title">Predicate</string>
    <string name="tv_tap_to_record">Нажми на кнопку чтобы записать свои аргументы или введи их вручную!</string>
    <string name="tv_send_arguments">Отправить</string>
    <string name="btn_menu">Меню</string>

    <string name="tv_sign_up">Регистрация</string>
    <string name="tv_sign_up_description">Зарегистрируйся в приложении или войди в свой аккаунт, чтобы пользоваться приложением</string>
    <string name="tv_email">Email</string>
    <string name="tv_first_name">Имя</string>
    <string name="tv_username">Логин</string>
    <string name="tv_password">Пароль</string>
    <string name="tv_repeat_password">Повторите пароль</string>
    <string name="btn_sign_up">Зарегистрироваться</string>
    <string name="tv_have_account_sign_in">Есть аккаунт? Войти</string>
    <string name="btn_sign_in">Войти</string>
    <string name="btn_no_account_sign_up">Нет аккаунта? Регистрация</string>
    <string name="tv_last_name">Фамилия</string>
    <string name="tv_sign_in">Авторизация</string>
    <string name="tv_sign_in_description">Войди в свой аккаунт или создай новый, чтобы пользоваться приложением</string>
    <string name="tv_mistakes">Обнаруженные ошибки</string>
    <string name="tv_not_found">Ошибки не найдены</string>
    <string name="tv_type_of_mistake">Тип ошибки</string>
    <string name="btn_decline">Отклонить</string>
</resources>