<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.sign_in.SignInFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryColor"
                android:elevation="24dp"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/screen_horizontal_margin"
                android:paddingVertical="20dp">

                <TextView
                    style="@style/H1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_sign_in"
                    android:textColor="@color/primary_text" />

                <TextView
                    style="@style/Subtitle3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_sign_in_description"
                    android:textColor="@color/primary_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/screen_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Caption4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/tv_username"
                        android:textColor="@color/primary_text" />

                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/bg_sign_up_edit_text"
                        android:inputType="text"
                        android:paddingVertical="4dp" />

                    <TextView
                        style="@style/Caption4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/tv_password"
                        android:textColor="@color/primary_text" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/bg_sign_up_edit_text"
                        android:inputType="textPassword"
                        android:layout_marginBottom="24dp"
                        android:paddingVertical="4dp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnSignIn"
                    style="@style/Button.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/bg_button_corners_12dp"
                    android:text="@string/btn_sign_in"
                    android:textSize="15sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignUp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginBottom="56dp"
                    android:text="@string/btn_no_account_sign_up"
                    app:cornerRadius="12dp"
                    app:strokeColor="@color/primaryColor"
                    app:strokeWidth="1dp" />

            </LinearLayout>



</LinearLayout>