<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.speech.SpeechFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:background="@color/primaryColor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_app_title"
                android:layout_weight="1"
                android:textSize="24sp"
                android:elevation="16dp" android:textStyle="bold"
                android:textColor="@color/secondary_text"/>

            <TextView
                android:id="@+id/btnMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_menu"
                android:textColor="@color/secondary_text"
                android:textSize="18sp"
                android:paddingVertical="4dp"
                android:paddingStart="4dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tap_to_record"
            android:textSize="18sp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/secondary_text"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/btnRecord"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_microphone" />


    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        android:layout_marginHorizontal="16dp"/>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button.Primary"
        android:text="@string/tv_send_arguments"
        android:layout_marginHorizontal="16dp"
        android:layout_gravity="bottom"
        android:layout_marginVertical="40dp"
        android:textAllCaps="false"/>

</LinearLayout>